# Information-Security

C Program Exploits/sploits/: sploit0.c  sploit1.c  sploit3.c  sploit4.c
C Program Exploits/targets/: target0.asm
Crack Bad Encryption/: attack.py  decode.py  filter.py  solutions.txt  tested.txt
HW1/: test.txt  try.py
HW1/hao45/: attack.py  solutions.txt
HW2/: b.html
HW2/hao45/: README.txt  c.html
HW3/: solutions.txt
HW3/2_attack/: New Text Document.txt
HW4/: CMakeLists.txt
HW4/sploits/: sploit2.c
NW Analysis/: README  scanner.py
SQL Injection/: c.html
SQL Injection/hao45/: a.txt  b.html
